--- a/index.html
+++ b/index.html
@@ -129,6 +129,10 @@
 
 
   <main class="main">
+    <img src="img/circle-gray.svg" alt="" class="main-circle__gray">
+    <img src="img/circle-gray.svg" alt="" class="main-circle__gray2">
+    <img src="img/box-1.svg" alt="" class="main-box-1">
+    <img src="img/circle-very-big.svg" alt="" class="main-circle__very-big">
     <section class="container frontend">
       <img src="img/frontend-img.svg" alt="">
       <div class="frontend-card">
@@ -358,6 +362,8 @@
   </main>
 
   <footer class="container footer d-flex flex-column align-items-end">
+    <img src="img/circle-fiolet-big.svg" class="footer-circle__fiolet-big">
+    <img src="img/cirdle1.svg" alt="" class="footer-cirdle1">
     <a href=""><img src="img/logo.svg" alt=""></a>
     <ul class="footer-list d-flex flex-wrap ">
       <li><a href="" class="footer-list__link">about Me</a></li>
